--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
     <script src="./index.js" charset="utf-8"></script>
   </body>
 
-  <footer>www 🎲 App Brewery 🎲 com</footer>
+  <footer>www 🎲 Yasmeen Qawasmy 🎲 com</footer>
 </html>
